<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainingContentSharing</string>
    <string name="action_settings">Settings</string>
    
    <string name="simple_sharing">Simple Sharing</string>
    <string name="btn_simple_sharing">Sharing</string>
    
    <string name="simple_choose_sharing">Chooser Simple Sharing</string>
    <string name="btn_simple_choose_sharing">Sharing</string>
    <string name="custom_title">Custom Title</string>
    
    <string name="simple_sharing2">Multiple Simple Sharing</string>
    <string name="btn_simple_sharing2">Sharing</string>
    
    <string name="simple_sharing3">File Sharing</string>
    <string name="btn_simple_sharing3">Sharing</string>
    <string name="btn_simple_sharing4">Requesting</string>
    
    <string name="txt_client">Client</string>
    <string name="txt_provider">Provider</string>

</resources>
