<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:textSize="@dimen/title_size"
    	android:text="@string/txt_client"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/txt_simple_sharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/simple_sharing" />
    <Button
        android:id="@+id/btn_simple_sharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txt_simple_sharing"
        android:text="@string/btn_simple_sharing" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/txt_simple_sharing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/simple_choose_sharing" />
    <Button
        android:id="@+id/btn_simple_sharing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txt_simple_sharing1"
        android:text="@string/btn_simple_choose_sharing" />
    </RelativeLayout>      
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/txt_simple_sharing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/simple_sharing2" />
    <Button
        android:id="@+id/btn_simple_sharing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txt_simple_sharing2"
        android:text="@string/btn_simple_sharing2" />
    </RelativeLayout>  
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/txt_simple_sharing3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/simple_sharing3" />
    <Button
        android:id="@+id/btn_simple_sharing3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txt_simple_sharing3"
        android:text="@string/btn_simple_sharing3" />
    <Button
        android:id="@+id/btn_simple_sharing4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_simple_sharing3"
        android:text="@string/btn_simple_sharing4" />
    </RelativeLayout>
</LinearLayout>
